--- a/.github/workflows/APK-main.yml
+++ b/.github/workflows/APK-main.yml
@@ -22,6 +22,7 @@ jobs:
           bash ${{ github.workspace }}/diy-main.sh
       - name: Build With Gradle
         run: |
+          cd TVBoxOSC
           chmod +x gradlew
           ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
       - name: Prepare App
