--- a/.github/workflows/APK-main.yml
+++ b/.github/workflows/APK-main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Clone Project
-        run: git clone -b main --depth=1 https://github.com/q215613905/TVBoxOS.git
+        run: git clone -b main --depth=1 https://github.com/lm317379829/TVBoxOSC.git
       - name: DIY
         run: |
           chmod +x diy-main.sh
