--- a/.github/workflows/APK-J.yml
+++ b/.github/workflows/APK-J.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Clone Project
-        run: git clone -b dev --depth=1 https://github.com/lm317379829/TVBoxOS-J
+        run: git clone -b main --depth=1 https://github.com/lm317379829/TVBoxOS-J
       - name: DIY
         run: |
           chmod +x diy-J.sh
