--- a/.github/workflows/APK-J.yml
+++ b/.github/workflows/APK-J.yml
@@ -22,6 +22,9 @@ jobs:
           bash ${{ github.workspace }}/diy-J.sh
       - name: Build With Gradle
         run: |
+          num=$(find ${{ github.workspace }} -name gradlew  | awk -F"/" '{print NF-1}')
+          DIR=$(find ${{ github.workspace }} -name gradlew  | cut -d \/ -f$num)
+          cd $DIR
           chmod +x gradlew
           ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
       - name: Prepare App
