--- a/.github/workflows/APK-TV.yml
+++ b/.github/workflows/APK-TV.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           num=$(find ${{ github.workspace }} -name gradlew | grep -v exo | awk -F"/" '{print NF-1}')
           DIR=$(find ${{ github.workspace }} -name gradlew | grep -v exo | cut -d \/ -f$num)
-          cd $DIR
+          cd  ${{ github.workspace }}/$DIR
           chmod +x gradlew
           ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
       - name: Prepare App
