--- a/.github/workflows/APK-J.yml
+++ b/.github/workflows/APK-J.yml
@@ -15,8 +15,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Clone Project
-        run: git clone -b main --depth=1 https://github.com/q215613905/TVBoxOS.git
+#       run: git clone -b main --depth=1 https://github.com/q215613905/TVBoxOS.git
 #       run: git clone -b main --depth=1 https://github.com/winstonxg/TVBoxOS.git
+run: git clone -b main --depth=1 https://github.com/winstonxg/TVBoxOS/tree/1469c788479afcfd2f9c514f0293dc1cfadb6020
       - name: DIY
         run: |
           chmod +x diy-J.sh
