--- a/.github/workflows/APK-TV.yml
+++ b/.github/workflows/APK-TV.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Clone Project
+        #run: git clone -b release --depth=1 https://github.com/FongMi/TV.git
         run: git clone -b dev --depth=1 https://github.com/FongMi/TV.git
       - name: DIY
         run: |
